# CrackIt

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh
.streamlit/: config.toml
config/: __init__.py  settings.py
data/resources/: seed_resources.csv
scripts/: seed_resources.py
src/: __init__.py
src/agents/: __init__.py  graph.py  jd_parser.py  resource_matcher.py  resource_tagger.py  state.py
src/api/: __init__.py  main.py  schemas.py
src/api/routers/: jobs.py  resources.py
src/cache/: __init__.py  hasher.py  store.py
src/dashboard/: __init__.py  app.py  theme.py
src/scraper/: __init__.py  browser.py  engine.py  extractors.py  models.py  url_builder.py
src/vectorstore/: __init__.py  client.py  schema.py  search.py
tests/: __init__.py
